# caude-remote

./: .dockerignore  .env.example  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  deploy.sh  example.env  install.sh  package-lock.json  package.json  pyproject.toml  qr_code.py  requirements.txt  tsconfig.json  verify
.claude/: memory.db  settings.json
.claude-flow/: CAPABILITIES.md  config.yaml  daemon-state.json
assets/: README.txt
docker/: .dockerignore  Dockerfile.python  Dockerfile.rust  docker-compose.yml  wifi-densepose-v1.rvf
docs/: WITNESS-LOG-028.md  build-guide.md  security-audit-wasm-edge-vendor.md  user-guide.md  (+1 more)
firmware/esp32-csi-node/components/wasm3/: CMakeLists.txt
rust-port/wifi-densepose-rs/crates/wifi-densepose-api/: Cargo.toml  README.md
rust-port/wifi-densepose-rs/crates/wifi-densepose-api/src/: lib.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-config/: Cargo.toml  README.md
rust-port/wifi-densepose-rs/crates/wifi-densepose-config/src/: lib.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-core/: Cargo.toml  README.md
rust-port/wifi-densepose-rs/crates/wifi-densepose-core/src/: error.rs  lib.rs  traits.rs  types.rs  utils.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-db/: Cargo.toml  README.md
rust-port/wifi-densepose-rs/crates/wifi-densepose-db/src/: lib.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-desktop/: Cargo.toml  README.md  tauri.conf.json
rust-port/wifi-densepose-rs/crates/wifi-densepose-desktop/.claude-flow/: daemon-state.json
rust-port/wifi-densepose-rs/crates/wifi-densepose-desktop/.claude-flow/data/: pending-insights.jsonl
rust-port/wifi-densepose-rs/crates/wifi-densepose-desktop/.claude-flow/sessions/: current.json  session-1773100562538.json  session-1773101285009.json
rust-port/wifi-densepose-rs/crates/wifi-densepose-desktop/capabilities/: default.json
rust-port/wifi-densepose-rs/crates/wifi-densepose-desktop/src/: lib.rs  main.rs  state.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-desktop/src/commands/: discovery.rs  flash.rs  mod.rs  ota.rs  provision.rs  server.rs  settings.rs  wasm.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-desktop/src/domain/: config.rs  firmware.rs  mod.rs  node.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-desktop/tests/: api_integration.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-desktop/ui/: index.html  package-lock.json  package.json  vite.config.ts
rust-port/wifi-densepose-rs/crates/wifi-densepose-desktop/ui/.claude-flow/: daemon-state.json
rust-port/wifi-densepose-rs/crates/wifi-densepose-desktop/ui/.claude-flow/data/: pending-insights.jsonl
rust-port/wifi-densepose-rs/crates/wifi-densepose-desktop/ui/.claude-flow/sessions/: current.json
rust-port/wifi-densepose-rs/crates/wifi-densepose-desktop/ui/src/: App.tsx  design-system.css  main.tsx  types.ts  version.ts
rust-port/wifi-densepose-rs/crates/wifi-densepose-desktop/ui/src/components/: NodeCard.tsx  Sidebar.tsx  StatusBadge.tsx
rust-port/wifi-densepose-rs/crates/wifi-densepose-desktop/ui/src/hooks/: useNodes.ts  useServer.ts
rust-port/wifi-densepose-rs/crates/wifi-densepose-desktop/ui/src/pages/: Dashboard.tsx  EdgeModules.tsx  FlashFirmware.tsx  MeshView.tsx  NetworkDiscovery.tsx  Nodes.tsx  OtaUpdate.tsx  Sensing.tsx  Settings.tsx
rust-port/wifi-densepose-rs/crates/wifi-densepose-ruvector/: Cargo.toml  README.md
rust-port/wifi-densepose-rs/crates/wifi-densepose-ruvector/benches/: crv_bench.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-ruvector/src/: lib.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-ruvector/src/crv/: mod.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-ruvector/src/mat/: breathing.rs  heartbeat.rs  mod.rs  triangulation.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-ruvector/src/signal/: bvp.rs  fresnel.rs  mod.rs  spectrogram.rs  subcarrier.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-ruvector/src/viewpoint/: attention.rs  coherence.rs  fusion.rs  geometry.rs  mod.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-signal/: Cargo.toml  README.md
rust-port/wifi-densepose-rs/crates/wifi-densepose-signal/benches/: signal_bench.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-signal/src/: bvp.rs  csi_processor.rs  csi_ratio.rs  features.rs  fresnel.rs  hampel.rs  hardware_norm.rs  lib.rs  motion.rs  phase_sanitizer.rs  spectrogram.rs  subcarrier_selection.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-signal/src/ruvsense/: adversarial.rs  attractor_drift.rs  coherence.rs  coherence_gate.rs  cross_room.rs  field_model.rs  gesture.rs  intention.rs  longitudinal.rs  mod.rs  multiband.rs  multistatic.rs  phase_align.rs  pose_tracker.rs  temporal_gesture.rs  tomography.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-signal/tests/: validation_test.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-wasm/: Cargo.toml  README.md
rust-port/wifi-densepose-rs/crates/wifi-densepose-wasm/src/: lib.rs  mat.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-wifiscan/: Cargo.toml  README.md
rust-port/wifi-densepose-rs/crates/wifi-densepose-wifiscan/src/: error.rs  lib.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-wifiscan/src/adapter/: linux_scanner.rs  macos_scanner.rs  mod.rs  netsh_scanner.rs  wlanapi_scanner.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-wifiscan/src/domain/: bssid.rs  frame.rs  mod.rs  registry.rs  result.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-wifiscan/src/pipeline/: attention_weighter.rs  breathing_extractor.rs  correlator.rs  fingerprint_matcher.rs  mod.rs  motion_estimator.rs  orchestrator.rs  predictive_gate.rs  quality_gate.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-wifiscan/src/port/: mod.rs  scan_port.rs
rust-port/wifi-densepose-rs/patches/ruvector-crv/: Cargo.toml  Cargo.toml.orig  README.md
rust-port/wifi-densepose-rs/patches/ruvector-crv/src/: error.rs  lib.rs  session.rs  stage_i.rs  stage_ii.rs  stage_iii.rs  stage_iv.rs  stage_v.rs  stage_vi.rs  types.rs
(+656 files in other folders)
