[package]
name = "wifi-densepose-api"
version.workspace = true
edition.workspace = true
description = "REST API for WiFi-DensePose"
license.workspace = true
authors = ["rUv <ruv@ruv.net>", "WiFi-DensePose Contributors"]
repository.workspace = true
documentation.workspace = true
keywords = ["wifi", "api", "rest", "densepose", "websocket"]
categories = ["web-programming::http-server", "science"]
readme = "README.md"

[dependencies]
