[package]
name = "wifi-densepose-ruvector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "RuVector v2.0.4 integration layer — ADR-017 signal processing and MAT ruvector integrations"
repository.workspace = true
keywords = ["wifi", "csi", "ruvector", "signal-processing", "disaster-detection"]
categories = ["science", "computer-vision"]
readme = "README.md"

[features]
default = []
crv = ["dep:ruvector-crv", "dep:ruvector-gnn", "dep:serde", "dep:serde_json"]

[dependencies]
ruvector-mincut = { workspace = true }
ruvector-attn-mincut = { workspace = true }
ruvector-temporal-tensor = { workspace = true }
ruvector-solver = { workspace = true }
ruvector-attention = { workspace = true }
ruvector-crv = { workspace = true, optional = true }
ruvector-gnn = { workspace = true, optional = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
approx = "0.5"
criterion = { workspace = true }

[[bench]]
name = "crv_bench"
harness = false
