[package]
name = "wifi-densepose-signal"
version.workspace = true
edition.workspace = true
description = "WiFi CSI signal processing for DensePose estimation"
license.workspace = true
authors = ["rUv <ruv@ruv.net>", "WiFi-DensePose Contributors"]
repository.workspace = true
documentation = "https://docs.rs/wifi-densepose-signal"
keywords = ["wifi", "csi", "signal-processing", "densepose", "rust"]
categories = ["science", "computer-vision"]
readme = "README.md"

[dependencies]
# Core utilities
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true
chrono = { version = "0.4", features = ["serde"] }

# Signal processing
ndarray = { workspace = true }
rustfft.workspace = true
num-complex.workspace = true
num-traits.workspace = true

# Graph algorithms
ruvector-mincut = { workspace = true }
ruvector-attn-mincut = { workspace = true }

# Attention and solver integrations (ADR-017)
ruvector-attention = { workspace = true }
ruvector-solver = { workspace = true }

# Midstreamer integrations (ADR-032a)
midstreamer-temporal-compare = { workspace = true }
midstreamer-attractor = { workspace = true }

# Internal
wifi-densepose-core = { version = "0.3.0", path = "../wifi-densepose-core" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest.workspace = true

[[bench]]
name = "signal_bench"
harness = false
